Security updates for server

--- a/public/home.html
+++ b/public/home.html
@@ -65,7 +65,11 @@
 		<div class="ui middle aligned center aligned grid">
 			<div class="column">
 				<div id="step-one" class="ui transition hidden">
-					<img src="./images/hermes.png" class="ui image" />
+					<img
+						src="./images/hermes.png"
+						class="ui image"
+						style="margin-top: 2%"
+					/>
 					<h1 class="ui step-one-header">Hermes</h1>
 					<button id="exchange-button" class="ui primary button huge">
 						Begin authentication
@@ -74,8 +78,20 @@
 						class="ui header"
 						style="font-family: 'Trebuchet MS', sans-serif; font-size: 1.5em"
 					>
-						Free, fast, and secure peer-peer file sharing built on top of the
-						Signal Protocol.
+						Free, fast, and secure <u>prototype</u> peer-peer file sharing built
+						on top of the Signal Protocol.
+						<br />
+						<div class="ui" style="margin-top: 2%">
+							<a
+								href="https://github.com/gregtuc/Hermes"
+								target="_blank"
+								rel="noopener noreferrer"
+								style="color: black"
+							>
+								Github
+								<i class="github icon large"></i
+							></a>
+						</div>
 					</h3>
 					<h3 class="ui header" style="font-style: italic"></h3>
 				</div>
